update my template

--- a/Manaual.tex
+++ b/Manaual.tex
@@ -7,8 +7,8 @@
 \usepackage{listings,xcolor}
 \usepackage{geometry}
 \usepackage{fontspec}
-\setsansfont{Monaco}
-\setmonofont[Mapping={}]{Monaco}
+\setsansfont{Source Code Pro}
+\setmonofont[Mapping={}]{Source Code Pro}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \geometry{left=2.5cm,right=2.5cm,top=2.5cm,bottom=2.5cm}
 \lstset{
@@ -25,20 +25,20 @@
     rulesepcolor = \color{red!20!green!20!blue!20},
     showstringspaces = false,
 }
-\title{ACM/ICPC Template Manaual}
-\author{X.D. Network Ingenuity}
+\title{JB/ICPC Template Manaual}
+\author{Carry Rainyday}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[C]{ACM/ICPC Template Manaual, X.D. Network Ingenuity}
+\fancyhead[C]{JB/ICPC Template Manaual, Carry Rainyday}
 \begin{document}\small
 \begin{titlepage}
 \begin{center}
 \vspace*{0.5cm}\includegraphics[width=0.75\textwidth]{logo.jpg} \\ [2cm]
 \HRule \\ [1cm]
-\textbf{\Huge{ACM/ICPC Template Manaual}} \\ [0.5cm]
+\textbf{\Huge{JB/ICPC Template Manaual}} \\ [0.5cm]
 \HRule \\ [4cm]
-\textbf{\Huge{Shanghai University}} \\ [1cm]
-\LARGE{X.D. Network Ingenuity}
+\textbf{\Huge{Northeast Agricultural University}} \\ [1cm]
+\LARGE{Carry Rainyday}
 \vfill
 \Large{\today}
 \end{center}
